[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Markdown-Generator"
version = "0.0.1"
authors = [
  { name="Hypersport", email="boss.yuan@outlook.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["Markdown", "Generator"]
[project.urls]
"Homepage" = "https://github.com/hypersport/Markdown-Generator"
"Bug Tracker" = "https://github.com/hypersport/Markdown-Generator/issues"
